# Planets-simulation

./: .gitignore  CMakeLists.txt  main.cpp
include/: Solver_base.h  gnuplotting.h  input_reader.h  phy.h  runge_kutta.h  solver_runge_kutta_3.h  solver_runge_kutta_4.h  solver_runge_kutta_5.h  solver_runge_kutta_adaptive.h  sys_utils.h
inputs/: test1
src/: Solver_base.cpp  gnuplotting.cpp  input_reader.cpp  phy.cpp  runge_kutta.cpp  solver_runge_kutta_3.cpp  solver_runge_kutta_4.cpp  solver_runge_kutta_5.cpp  solver_runge_kutta_adaptive.cpp  sys_utils.cpp
